# aura

./: .gitignore  meson.build  meson_options.txt
.github/workflows/: ci.yml  gh-pages.yml
example/glfw/: glfw_aurify.hpp  glfw_events.hpp  simple.cpp
include/boost/aura/: attach.hpp  attribute.hpp  aura.hpp  config.hpp  emit.hpp  event.hpp  meta.hpp  mute.hpp  subscribe.hpp  thread_affinity.hpp  thread_local_queue.hpp
include/boost/aura/detail/: common.hpp  mp11.hpp  weak_store.hpp
src/: subscribe.cpp  thread_local_queue.cpp
test/: Jamfile.v2  _hpp_compile_attach_test.cpp  _hpp_compile_attribute_test.cpp  _hpp_compile_aura_test.cpp  _hpp_compile_emit_test.cpp  _hpp_compile_mute_test.cpp  _hpp_compile_subscribe_test.cpp  args_subscribe_test.cpp  attr_test.cpp  barrier.hpp  ct_attr_test.cpp  ct_basic_test.cpp  ct_lambda_test.cpp  ct_tlq_lifetime_test.cpp  ct_wait_missed_wakeup_test.cpp  ct_wait_test.cpp  emit_stub_test.cpp  emit_test.cpp  mute_emit_test.cpp  mute_test.cpp  release_test.cpp  shutdown1_test.cpp  shutdown2_test.cpp  shutdown3_test.cpp  shutdown4_test.cpp  shutdown5_test.cpp  shutdown6_test.cpp  shutdown7_test.cpp  shutdown8_test.cpp  shutdown9_test.cpp  subscribe_emit_test.cpp  subscription_lifetime_test.cpp  subscription_user_data_test.cpp  weak_store_test.cpp
